--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <div class="col-md-9">
             <app-books-list></app-books-list>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 cart">
            <app-cart></app-cart>
         </div>
 
