--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,8 +1,11 @@
 <div div class="row">
-  <div class="col-lg-10">
+  <div class="col-lg-8">
     {{item.title}}
   </div>
-  <div class="col-lg-2" style="padding:0">
+  <div class="col-lg-2">
+    {{item.quantity}}
+  </div>
+  <div class="col-lg-2 no-padding" >
     <button class="btn btn-warning" (click)='onRemove()'> X </button>
   </div>
 </div>
