--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
     </div>
     <div class="row">
         <div class="col-md-9">
-            <app-books-list></app-books-list>
+            <!-- <router-outlet></router-outlet> -->
+            <!-- <app-books-list></app-books-list> -->
+            <router-outlet></router-outlet>
         </div>
         <div class="col-md-3 cart">
            <app-cart></app-cart>
