--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container" [routerLink]="['/books',book.isbn ]">
+
   <div class="row">
     <div class="col-xs-12">
       <h5>{{book.title}}</h5>
@@ -11,7 +12,8 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-        <button (click)="onAdd()">Add to cart</button>
+        <button (click)="onAdd($event)">Add to cart</button>
       </div>
 </div>
+
 </div>
