--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div class="container">
     <div class="row">
-            <div class="col-xs-12">
-                    <h3>My book store</h3>
-                    
+            <div class="col-lg-12">
+                <div class="header">
+                        <h3>Matan's book store</h3>        
                 </div>
+                                
+            </div>
     </div>
     <div class="row">
         <div class="col-md-9">
