--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -2,12 +2,13 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h5>{{book.title}}</h5>
+      <h5>Title: {{book.title}}</h5>
     </div>
   </div>
   <div class="row">
       <div class="col-xs-12">
-          <p>{{book.description}}</p>
+          <p>Description: <br> {{book.description}}</p>
+          <p><b>Price:</b> ${{book.price}}</p>
         </div>
   </div>
   <div class="row">
