--- a/src/app/books-list/books-list.component.html
+++ b/src/app/books-list/books-list.component.html
@@ -1,4 +1,5 @@
-<ul class="list-group">
+<p *ngIf="!books.length">Loading books...</p>
+<ul *ngIf="books.length" class="list-group">
   <li *ngFor="let book of books" class="list-group-item">
     <app-book [book]="book"></app-book>
   </li>
