--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -3,7 +3,7 @@
     {{item.title}}
   </div>
   <div class="col-lg-2">
-    {{item.quantity}}
+    ({{item.quantity}})
   </div>
   <div class="col-lg-2 no-padding" >
     <button class="btn btn-warning" (click)='onRemove()'> X </button>
