--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,18 @@
 <div class="container">
-    <div class="row">
-            <div class="col-lg-12">
-                <div class="header">
-                        <h3>Matan's book store</h3>        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Matan's book store</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                    <a class="nav-item nav-link" routerLink="user" routerLinkActive="active">User <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" routerLink="admin" routerLinkActive="active">Admin</a>
+                  </div>
                 </div>
-                                
-            </div>
-    </div>
+              </nav>
+
+    <hr>
     <div class="row">
         <div class="col-md-12">
                 <router-outlet></router-outlet>
