--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -10,7 +10,7 @@
   <div class="col-lg-12">
     <div class="btn-group">
         <button class="btn btn-info" [disabled]="!book" (click)="onAddToCart()">Add To Cart</button>
-        <button class="btn" routerLink="/books">Back</button>
+        <button class="btn" routerLink="/user">Back</button>
     </div>
 
   </div>
